# projeto-final-final-computacao-grafica

./: CMakeLists.txt  README.md  checklist-refactor-game.md  implementation_plan.md.resolved  implementation_plan2.md  main.cpp  plano-de-acao.md
.cursor/plans/: luzes_apagadas_game_tasks_976a8303.plan.md
assets/audio/sfx/: sfx_door_open.flac
assets/enemies/: inimigo_fase.glb  inimigo_fase_2.glb  inimigo_fase_3.glb
include/audio/: audio_system.h  audio_tuning.h
include/core/: avatarEnemy.h  config.h  entities.h  game.h  game_enums.h  game_state.h  light_system.h  lightpost.h
include/graphics/: drawlevel.h  hud.h  lighting.h  menu.h  skybox.h
include/input/: keystate.h
include/level/: level.h  level_validation.h
include/utils/: assets.h
maps/: level1.txt  level2.txt  level3.txt  map1.txt
shaders/: level_transition.frag  level_transition.vert  lightpost.frag  lightpost.vert
src/audio/: audio_system.cpp
src/core/: app.cpp  avatarEnemy.cpp  entities.cpp  game.cpp  light_system.cpp  movement.cpp  player.cpp
src/graphics/: drawlevel.cpp  hud.cpp  lighting.cpp  menu.cpp  skybox.cpp
src/input/: input.cpp  keystate.cpp
src/level/: level.cpp  level_validation.cpp
src/utils/: assets.cpp
